# fizzbuzz_generator

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  .yamlfmt  .yamllint  CMakeLists.txt  Doxyfile  README.md  cliff.toml  conanfile.py  create_zip.py  sonar-project.properties
.github/workflows/: ci.yml
include/fizzbuzz/: fizzbuzz.hpp
src/: CMakeLists.txt  fizzbuzz.cpp  main.cpp
tests/: CMakeLists.txt  test_fizzbuzz.cpp  test_main_cli.cpp
